--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,6 +70,8 @@ dependencies {
 
     implementation 'com.google.android.material:material:1.0.0'
 
+    implementation project(':main')
+
     testImplementation 'junit:junit:4.12'
     testImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:$mockito_kotlin_version"
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
