--- a/features/main/src/main/AndroidManifest.xml
+++ b/features/main/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
 
     <application>
         <activity
-            android:name="com.buchatskij.graphtest.main.MainActivity"
+            android:name="com.buchatskij.graphtest.main.ui.MainActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
