--- a/root/build.gradle
+++ b/root/build.gradle
@@ -27,11 +27,11 @@ android {
 }
 
 dependencies {
-    implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
+    api "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
     kapt "androidx.lifecycle:lifecycle-common-java8:$lifecycle_version"
-    implementation "androidx.lifecycle:lifecycle-reactivestreams:$lifecycle_version"
+    api "androidx.lifecycle:lifecycle-reactivestreams:$lifecycle_version"
 
-    implementation "io.reactivex.rxjava2:rxandroid:$rx_android_version"
-    implementation "io.reactivex.rxjava2:rxjava:$rx_java_version"
-    implementation "io.reactivex.rxjava2:rxkotlin:$rx_kotlin_version"
+    api "io.reactivex.rxjava2:rxandroid:$rx_android_version"
+    api "io.reactivex.rxjava2:rxjava:$rx_java_version"
+    api "io.reactivex.rxjava2:rxkotlin:$rx_kotlin_version"
 }
