--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,19 +30,7 @@ android {
 }
 
 dependencies {
-    def retrofit_version = '2.6.1'
-
-    def okhttp_version = '4.2.1'
-    def gson_version = '2.8.6'
-
     implementation 'androidx.appcompat:appcompat:1.1.0'
-
-    implementation "com.squareup.okhttp3:okhttp:$okhttp_version"
-    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
-    implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
-    implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofit_version"
-
-    implementation "com.google.code.gson:gson:$gson_version"
 
     implementation "androidx.recyclerview:recyclerview:1.1.0"
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
@@ -50,5 +38,6 @@ dependencies {
     implementation 'com.google.android.material:material:1.0.0'
 
     implementation project(':root')
+    implementation project(':network')
     implementation project(':main')
 }
