--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -4,6 +4,10 @@ ext {
     rx_android_version = "2.1.1"
     rx_kotlin_version = "2.4.0"
 
+    retrofit_version = '2.6.1'
+    okhttp_version = '4.2.1'
+    gson_version = '2.8.6'
+
     lifecycle_version = '2.1.0'
 
     dagger_version = '2.25.2'
