GT-10 Сделал получение точек с сервера

--- a/features/graph/build.gradle
+++ b/features/graph/build.gradle
@@ -30,5 +30,6 @@ android {
 
 dependencies {
     implementation project(':root')
+    implementation project(':network')
     implementation project(':uicommon')
 }
