--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -21,6 +21,8 @@ ext {
     recyclerview_version = '1.1.0'
     constraint_layout_version = '1.1.3'
     material_version = '1.0.0'
+
+    mp_chart_version = 'v3.1.0'
 }
 
 def enableKotlin(project) {
